Fixed infinite scroll container overflow

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,7 @@ form {
 .infinite-scroll-component_outerdiv {
   width: 100%;
 }
+
+.infinite-scroll-component {
+  overflow: visible !important;
+}
